Updated apis for get role & privileges